Changed the IESG photo page to show full area name instead of area acronym in each box heading.  Linked the area name to the area page.  Removed the area acronym under each picture.  Tweaked the vertical alignment of photo wells.  Fixes an issue raised by housley@vigilsec.com  - Legacy-Id: 11390

--- a/ietf/static/ietf/css/ietf.css
+++ b/ietf/static/ietf/css/ietf.css
@@ -464,9 +464,14 @@ label#list-feeds {
   height: 3em;
 }
 
+ul.list-inline li {
+	vertical-align: bottom;
+}
+
 .bio-text {
 	max-width: 85ex;
 }
+
 .bio-photo {
 	float: left;
 	margin: 0.3em 1em 0.5em 0.1em;
